# jmaplib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: authentication.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/api/: client.rst  methods.rst  models.rst
examples/: find_mailbox.py  import_mbox.py
jmapc/: client.py
jmapc/methods/: email.py
jmapc/models/: __init__.py  email.py
jmaplib/: __init__.py  api.py  client.py  errors.py  serializer.py  session.py
jmaplib/fastmail/: __init__.py  maskedemail_methods.py
jmaplib/methods/: __init__.py  base.py  core.py  custom.py  email.py  email_submission.py  identity.py  mailbox.py  search_snippet.py  thread.py
jmaplib/models/: __init__.py  email.py  email_submission.py  identity.py  mailbox.py
tests/: conftest.py  data.py  test_client.py  test_events.py  test_module.py  test_ref.py  test_serializer.py  utils.py
tests/methods/: test_base.py  test_core.py  test_custom.py  test_email.py  test_email_submission.py  test_errors.py  test_fastmail_maskedemail.py  test_identity.py  test_mailbox.py  test_searchsnippet.py  test_thread.py
tools/: .codespellrc  .markdownlint.yml  mypy.ini  ruff.toml
