[build-system]
build-backend = "poetry.core.masonry.api"

[project]
name = "jmaplib"
version = "0.1.0"
description = "JMAP protocol client for Python"
keywords = [
    "email",
    "mail",
    "jmap",
    "protocol",
    "client",
    "fastmail",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "docs/LICENSE"]
authors = [ { name = "David Aderbauer", email = "Dacid99@Dacid99.net" } ]
readme = "README.md"
repository = "https://github.com/Dacid99/jmaplib"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Email :: Post-Office",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Typing :: Typed",
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "brotli (>=1.0.9)",
    "dataclasses-json",
    "python-dateutil",
    "requests",
    "sseclient",
]
include = [
    "examples",
]

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
poethepoet = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"
types-python-dateutil = "*"
types-requests = "*"
responses = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"
doc8 = { version = "*", python = "^3.10" }

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files --show-diff-on-failure"
help = "Check all files"

[tool.poe.tasks.pytest]
cmd = "pytest"
help = "Run unit tests with pytest"

[tool.poe.tasks.docs-build]
cmd = "sphinx-build -b html docs docs/_build/html"
help = "Build documentation with Sphinx"

[tool.poe.tasks.docs-serve]
cmd = "python -m http.server 8000 --directory docs/_build/html"
help = "Serve documentation locally on http://localhost:8000"

[tool.poe.tasks.docs-clean]
cmd = "rm -rf docs/_build"
help = "Clean documentation build directory"

[tool.poe.tasks.test]
sequence = ["lint", "pytest"]
help = "Run all tests"

[tool.coverage.run]
source = ["jmaplib"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.pytest.ini_options]
addopts = """\
    --cov \
    --cov-append \
    --cov-report term \
    --cov-report xml:.pytest_coverage.xml \
    --junitxml=.pytest_results.xml \
"""

# vim: ft=cfg
